--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="icon" href="images/icon.png">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-			crossorigin="anonymous">
+					crossorigin="anonymous">
 		<!--<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">-->
 		<!--<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">-->
 		<!--<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">-->
@@ -19,17 +19,89 @@
 </head>
 
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-6 col-xs-12 test1"  >.col-md-6</div>
-			<div class="col-lg-6 col-xs-12 test2">.col-md-6</div>
-		</div>
+	<div class="sec1">	
+		
 	</div>
 
 
+
+	<!--<div class="container">
+		<div class="row s1">
+			
+			<a href="#" class="pull-left s1_phone ">
+				<span class="s1_phone_title">Custom care:</span>
+				<span class="s1_phone_number">888-23-4567</span>
+			</a>
+			<div class="dropdown pull-right">
+				<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+								aria-expanded="true">
+					<img src="images/1-search.png" alt="">
+					</button>
+
+					<div class="dropdown-menu  search_field   " >
+						<form class="form-inline ">
+						<div class="form-group">
+							<label class="sr-only" for="exampleInputEmail3">Search</label>
+							<input type="text" class="form-control" id="exampleInputEmail3" placeholder="Text here..">
+						</div>
+						<button type="submit" class="btn btn-default">Sign in</button>
+					</form>
+					</div>
+
+				
+					
+			</div>
+			<div class="dropdown pull-right">
+				<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+								aria-expanded="true">
+					$ US
+					<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu currency_field " aria-labelledby="dropdownMenu1">
+						<li><a href="#">$ US</a></li>
+						<li><a href="#">&euro; EU</a></li>
+						<li><a href="#">&#8372; UA</a></li>
+					</ul>
+			</div>
+			<div class="dropdown pull-right">
+				<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+								aria-expanded="true">
+					<img src="images/1-user-icon.png" alt=""> My account
+					</button>
+					<form class="form-horizontal dropdown-menu">
+						<div class="form-group">
+							<label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+							<div class="col-sm-10">
+								<input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+							<div class="col-sm-10">
+								<input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-sm-offset-2 col-sm-10">
+								<div class="checkbox">
+									<label>
+          <input type="checkbox"> Remember me
+        </label>
+								</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-sm-offset-2 col-sm-10">
+								<button type="submit" class="btn btn-default">Sign in</button>
+							</div>
+						</div>
+					</form>
+			</div>
+		</div>
+	</div>-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-			crossorigin="anonymous"></script>
+					crossorigin="anonymous"></script>
 		<!--<script type="text/javascript" src="scrollbar/jquery.mousewheel.js"></script>-->
 		<!--<script type="text/javascript" src="scrollbar/jquery.jscrollpane.min.js"></script>-->
 		<!--<script type="text/javascript" src="bootstrap.min.js"></script>-->
