--- a/homepage.html
+++ b/homepage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-US">
 
 <head>
@@ -6,25 +6,54 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="icon" href="images/icon.png">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-					crossorigin="anonymous">
-		<!--<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">-->
-		<!--<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">-->
-		<!--<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">-->
-		<!--<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+					crossorigin="anonymous">-->
+	<!--<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">-->
+	<!--<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">-->
+	<!--<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">-->
+	<!--<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
 			crossorigin="anonymous">-->
-		<!--<link rel="stylesheet" href="carousel.css">-->
-		<link rel="stylesheet" href="css/style.css">
-		<!--<link type="text/css" href="scrollbar/jquery.jscrollpane.css" rel="stylesheet" media="all" />-->
+	<!--<link rel="stylesheet" href="carousel.css">-->
+	<link rel="stylesheet" href="css/style.css">
+	<!--<link type="text/css" href="scrollbar/jquery.jscrollpane.css" rel="stylesheet" media="all" />-->
 </head>
 
 <body>
-	<div class="sec1">	
+	<div class="section s1">
+		<button class="s1_phone s1_dropbtn " >		
+					custom care: 888-23-4567
+		</button>
+
+
+<button class="s1_search s1_dropbtn">
+	<img class="s1_user_icon" src="images/1-search.png" alt="">
+</button>
+
+
+	<button class="s1_user s1_dropbtn">
+				<img class="s1_user_icon" src="images/1-user-icon.png" alt="">
+				<span class="s1_current_user" >My account</span>
+		</button>
+
+		<button class="s1_currency s1_dropbtn">
+				<span class="s1_current_currency" >&#36; us</span>
+				<img class="s1_caret" src="images/caret-light.png" alt="">
+		</button>
+
+		
+	
+		
+
+
+
+
+
+
+
+
+
 		
 	</div>
-
-
-
 	<!--<div class="container">
 		<div class="row s1">
 			
@@ -100,12 +129,12 @@
 		</div>
 	</div>-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-					crossorigin="anonymous"></script>
-		<!--<script type="text/javascript" src="scrollbar/jquery.mousewheel.js"></script>-->
-		<!--<script type="text/javascript" src="scrollbar/jquery.jscrollpane.min.js"></script>-->
-		<!--<script type="text/javascript" src="bootstrap.min.js"></script>-->
-		<script src="javascript/js.js" type="text/javascript"></script>
+	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+					crossorigin="anonymous"></script>-->
+	<!--<script type="text/javascript" src="scrollbar/jquery.mousewheel.js"></script>-->
+	<!--<script type="text/javascript" src="scrollbar/jquery.jscrollpane.min.js"></script>-->
+	<!--<script type="text/javascript" src="bootstrap.min.js"></script>-->
+	<script src="javascript/js.js" type="text/javascript"></script>
 </body>
 
 </html>
