--- a/homepage.html
+++ b/homepage.html
@@ -20,37 +20,30 @@
 
 <body>
 	<div class="section s1">
-
 		<div class="s1_container">
-			<div class="s1_left" id="yyy" >
-			<button class="s1_phone s1_dropbtn ">custom care: 888-23-4567</button>
-		</div>
-		<div class="s1_right">
-			<button class="s1_currency s1_dropbtn" onclick="ShowCurrencyList()">
+			<div class="s1_left">
+				<button class="s1_phone s1_dropbtn ">custom care: 888-23-4567</button>
+			</div>
+			<div class="s1_right">
+				<button class="s1_currency s1_dropbtn" onclick="ShowCurrencyList()">
 				<span class="s1_current_currency" >&#36; us</span>
 				<img class="s1_caret" src="images/caret-light.png" alt="">
 		</button>
-			<button class="s1_user s1_dropbtn" onclick="ShowLoginForm()">
+				<button class="s1_user s1_dropbtn" onclick="ShowLoginForm()">
 				<img class="s1_user_icon" src="images/1-user-icon.png" alt="">
 				<span class="s1_current_user" >My account</span>
 		</button>
-			<button class="s1_search s1_dropbtn" onclick="ShowSearchForm()" >
+				<button class="s1_search s1_dropbtn" onclick="ShowSearchForm()">
 			<img class="s1_search_icon" src="images/1-search.png" alt="">
 		</button>
+			</div>
 		</div>
-
-		</div>
-
-	
-
-
-
 	</div>
 	<div class="s1_dropdown_content_currency section ">
 		<ul>
-			<li><a href="#">&#36; US</a></li>
-			<li><a href="#">&euro; EU</a></li>
-			<li><a href="#">&#8372; UA</a></li>
+			<li><a class="s1_currency_value" href="#">&#36; US</a></li>
+			<li><a class="s1_currency_value" href="#">&euro; EU</a></li>
+			<li><a class="s1_currency_value" href="#">&#8372; UA</a></li>
 		</ul>
 	</div>
 	<div class="s1_dropdown_content_user section ">
@@ -72,17 +65,9 @@
 			<div class="s1_search_box">
 				<input type="text" name="" value="" placeholder="Type Here">
 			</div>
-			<button type="submit" class="s1_search_button">Search
-
-			</button>
+			<button type="submit" class="s1_search_button">Search</button>
 		</form>
 	</div>
-
-
-
-
-
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 					crossorigin="anonymous"></script>-->
