--- a/homepage.html
+++ b/homepage.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+	<!--SECTION 1-->
 	<div class="section s1">
 		<div class="s1_container">
 			<div class="s1_left">
@@ -67,6 +68,39 @@
 			</div>
 			<button type="submit" class="s1_search_button">Search</button>
 		</form>
+	</div>
+	<!--SECTION 2-->
+	<div class="section">
+		<div class="s2">
+			<div class="s2_logo_section"></div>
+			<div class="s2_menu">
+				<div class="s2_dropdown">
+					<button class="s2_dropbtn">new</button>
+					<div id="myDropdown" class="dropdown-content">
+						<a href="">Item 1</a>
+						<a href="">Item 2</a>
+						<a href="">Item 3</a>
+						<a href="">Item 4</a>
+						<a href="">Item 5</a>
+					</div>
+				</div>
+				<!--<ul class="s2_list">
+					<li class="s2_list_item">new
+						<ul>
+							<li>Item 1</li>
+							<li>Item 2</li>
+							<li>Item 3</li>
+							<li>Item 4</li>
+							<li>Item 5</li>
+						</ul>
+					</li>
+					<li class="s2_list_item">designers</li>
+					<li class="s2_list_item">women</li>
+					<li class="s2_list_item">men</li>
+					<li class="s2_list_item">clearence</li>
+				</ul>-->
+			</div>
+		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
