--- a/homepage.html
+++ b/homepage.html
@@ -76,7 +76,8 @@
 			<div class="s2_menu">
 				<div class="s2_dropdown">
 					<button class="s2_dropbtn">new</button>
-					<div id="myDropdown" class="dropdown-content">
+					<img src="../images/caret-dark.png" alt="">
+					<div class="s2_dropdown_content">
 						<a href="">Item 1</a>
 						<a href="">Item 2</a>
 						<a href="">Item 3</a>
@@ -84,21 +85,86 @@
 						<a href="">Item 5</a>
 					</div>
 				</div>
-				<!--<ul class="s2_list">
-					<li class="s2_list_item">new
-						<ul>
-							<li>Item 1</li>
-							<li>Item 2</li>
-							<li>Item 3</li>
-							<li>Item 4</li>
-							<li>Item 5</li>
-						</ul>
-					</li>
-					<li class="s2_list_item">designers</li>
-					<li class="s2_list_item">women</li>
-					<li class="s2_list_item">men</li>
-					<li class="s2_list_item">clearence</li>
-				</ul>-->
+				<div class="s2_dropdown">
+					<button class="s2_dropbtn">designers</button>
+					<img src="../images/caret-dark.png" alt="">
+					<div class="s2_dropdown_content">
+						<a href="">Item 1</a>
+						<a href="">Item 2</a>
+						<a href="">Item 3</a>
+						<a href="">Item 4</a>
+						<a href="">Item 5</a>
+					</div>
+				</div>
+				<div class="s2_dropdown">
+					<button class="s2_dropbtn">women</button>
+					<img src="../images/caret-dark.png" alt="">
+					<div class="s2_dropdown_content">
+						<a href="">Item 1</a>
+						<a href="">Item 2</a>
+						<a href="">Item 3</a>
+						<a href="">Item 4</a>
+						<a href="">Item 5</a>
+					</div>
+				</div>
+				<div class="s2_dropdown">
+					<button class="s2_dropbtn">men</button>
+					<img src="../images/caret-dark.png" alt="">
+					<div class="s2_dropdown_content">
+						<a href="">Item 1</a>
+						<a href="">Item 2</a>
+						<a href="">Item 3</a>
+						<a href="">Item 4</a>
+						<a href="">Item 5</a>
+					</div>
+				</div>
+				<div class="s2_dropdown">
+					<button class="s2_dropbtn">clearence</button>
+					<img src="../images/caret-dark.png" alt="">
+					<div class="s2_dropdown_content">
+						<a href="">Item 1</a>
+						<a href="">Item 2</a>
+						<a href="">Item 3</a>
+						<a href="">Item 4</a>
+						<a href="">Item 5</a>
+					</div>
+				</div>
+			</div>
+			<div class="s2_cart">
+				<div class="s2_cart_top">
+					<span>Your cart</span>
+					<img src="../images/caret-light.png" alt="">
+				</div>
+				<div class="s2_cart_list">
+					<ul class="s2_cart_item_list">
+						<a href="">
+							<li class="s2_cart_item">Item 1</li>
+						</a>
+						<a href="">
+							<li class="s2_cart_item">Item 1</li>
+						</a>
+						<a href="">
+							<li class="s2_cart_item">Item 1</li>
+						</a>
+						<a href="">
+							<li class="s2_cart_item">Item 1</li>
+						</a>
+						<a href="">
+							<li class="s2_cart_item">Item 1</li>
+						</a>
+					</ul>
+				</div>
+				<div class="s2_cart_bottom">
+					<img src="../images/2-shopping-cart.png" alt="">
+					<div class="s2_cart_total_item">
+						<span class="s2_cart_item_number">0</span>
+						<span class="s2_cart_item_text">items</span>
+					</div>
+					<div class="s2_cart_total_price">
+						<span class="s2_cart_currency">$</span>
+						<span class="s2_cart_price_number">0</span>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
