--- a/homepage.html
+++ b/homepage.html
@@ -76,7 +76,7 @@
 			<div class="s2_menu">
 				<div class="s2_dropdown">
 					<button class="s2_dropbtn">new</button>
-					<img src="../images/caret-dark.png" alt="">
+					<img src="images/caret-dark.png" alt="">
 					<div class="s2_dropdown_content">
 						<a href="">Item 1</a>
 						<a href="">Item 2</a>
@@ -87,7 +87,7 @@
 				</div>
 				<div class="s2_dropdown">
 					<button class="s2_dropbtn">designers</button>
-					<img src="../images/caret-dark.png" alt="">
+					<img src="images/caret-dark.png" alt="">
 					<div class="s2_dropdown_content">
 						<a href="">Item 1</a>
 						<a href="">Item 2</a>
@@ -98,7 +98,7 @@
 				</div>
 				<div class="s2_dropdown">
 					<button class="s2_dropbtn">women</button>
-					<img src="../images/caret-dark.png" alt="">
+					<img src="images/caret-dark.png" alt="">
 					<div class="s2_dropdown_content">
 						<a href="">Item 1</a>
 						<a href="">Item 2</a>
@@ -109,7 +109,7 @@
 				</div>
 				<div class="s2_dropdown">
 					<button class="s2_dropbtn">men</button>
-					<img src="../images/caret-dark.png" alt="">
+					<img src="images/caret-dark.png" alt="">
 					<div class="s2_dropdown_content">
 						<a href="">Item 1</a>
 						<a href="">Item 2</a>
@@ -120,7 +120,7 @@
 				</div>
 				<div class="s2_dropdown">
 					<button class="s2_dropbtn">clearence</button>
-					<img src="../images/caret-dark.png" alt="">
+					<img src="images/caret-dark.png" alt="">
 					<div class="s2_dropdown_content">
 						<a href="">Item 1</a>
 						<a href="">Item 2</a>
@@ -133,7 +133,7 @@
 			<div class="s2_cart">
 				<div class="s2_cart_top">
 					<span>Your cart</span>
-					<img src="../images/caret-light.png" alt="">
+					<img src="images/caret-light.png" alt="">
 				</div>
 				<div class="s2_cart_list">
 					<ul class="s2_cart_item_list">
@@ -155,7 +155,7 @@
 					</ul>
 				</div>
 				<div class="s2_cart_bottom">
-					<img src="../images/2-shopping-cart.png" alt="">
+					<img src="images/2-shopping-cart.png" alt="">
 					<div class="s2_cart_total_item">
 						<span class="s2_cart_item_number">0</span>
 						<span class="s2_cart_item_text">items</span>
