Add styles for menu, shopping cart in section 2

--- a/homepage.html
+++ b/homepage.html
@@ -23,7 +23,7 @@
 	<div class="section s1">
 		<div class="s1_container">
 			<div class="s1_left">
-				<button class="s1_phone s1_dropbtn ">custom care: 888-23-4567</button>
+				<button class="s1_phone s1_dropbtn"  >custom care: 888-23-4567</button>
 			</div>
 			<div class="s1_right">
 				<button class="s1_currency s1_dropbtn" onclick="ShowCurrencyList()">
@@ -40,14 +40,14 @@
 			</div>
 		</div>
 	</div>
-	<div class="s1_dropdown_content_currency section ">
+	<div class=" s1_dropdown_content_currency section " >
 		<ul>
 			<li><a class="s1_currency_value" href="#">&#36; US</a></li>
 			<li><a class="s1_currency_value" href="#">&euro; EU</a></li>
 			<li><a class="s1_currency_value" href="#">&#8372; UA</a></li>
 		</ul>
 	</div>
-	<div class="s1_dropdown_content_user section ">
+	<div class="s1_dropdown_content_user section " >
 		<form action="">
 			<div class="s1_email">
 				<input type="text" name="" value="" placeholder="Email">
@@ -73,63 +73,6 @@
 	<div class="section">
 		<div class="s2">
 			<div class="s2_logo_section"></div>
-			<div class="s2_menu">
-				<div class="s2_dropdown">
-					<button class="s2_dropbtn">new</button>
-					<img src="images/caret-dark.png" alt="">
-					<div class="s2_dropdown_content">
-						<a href="">Item 1</a>
-						<a href="">Item 2</a>
-						<a href="">Item 3</a>
-						<a href="">Item 4</a>
-						<a href="">Item 5</a>
-					</div>
-				</div>
-				<div class="s2_dropdown">
-					<button class="s2_dropbtn">designers</button>
-					<img src="images/caret-dark.png" alt="">
-					<div class="s2_dropdown_content">
-						<a href="">Item 1</a>
-						<a href="">Item 2</a>
-						<a href="">Item 3</a>
-						<a href="">Item 4</a>
-						<a href="">Item 5</a>
-					</div>
-				</div>
-				<div class="s2_dropdown">
-					<button class="s2_dropbtn">women</button>
-					<img src="images/caret-dark.png" alt="">
-					<div class="s2_dropdown_content">
-						<a href="">Item 1</a>
-						<a href="">Item 2</a>
-						<a href="">Item 3</a>
-						<a href="">Item 4</a>
-						<a href="">Item 5</a>
-					</div>
-				</div>
-				<div class="s2_dropdown">
-					<button class="s2_dropbtn">men</button>
-					<img src="images/caret-dark.png" alt="">
-					<div class="s2_dropdown_content">
-						<a href="">Item 1</a>
-						<a href="">Item 2</a>
-						<a href="">Item 3</a>
-						<a href="">Item 4</a>
-						<a href="">Item 5</a>
-					</div>
-				</div>
-				<div class="s2_dropdown">
-					<button class="s2_dropbtn">clearence</button>
-					<img src="images/caret-dark.png" alt="">
-					<div class="s2_dropdown_content">
-						<a href="">Item 1</a>
-						<a href="">Item 2</a>
-						<a href="">Item 3</a>
-						<a href="">Item 4</a>
-						<a href="">Item 5</a>
-					</div>
-				</div>
-			</div>
 			<div class="s2_cart">
 				<div class="s2_cart_top">
 					<span>Your cart</span>
@@ -141,32 +84,105 @@
 							<li class="s2_cart_item">Item 1</li>
 						</a>
 						<a href="">
-							<li class="s2_cart_item">Item 1</li>
+							<li class="s2_cart_item">Item 2</li>
 						</a>
 						<a href="">
-							<li class="s2_cart_item">Item 1</li>
+							<li class="s2_cart_item">Item 3</li>
 						</a>
 						<a href="">
-							<li class="s2_cart_item">Item 1</li>
+							<li class="s2_cart_item">Item 4</li>
 						</a>
 						<a href="">
-							<li class="s2_cart_item">Item 1</li>
+							<li class="s2_cart_item">Item 5</li>
 						</a>
 					</ul>
 				</div>
 				<div class="s2_cart_bottom">
 					<img src="images/2-shopping-cart.png" alt="">
-					<div class="s2_cart_total_item">
-						<span class="s2_cart_item_number">0</span>
-						<span class="s2_cart_item_text">items</span>
+					<div class="s2_cart_bottom_right">
+						<div class="s2_cart_total_item">
+							<span class="s2_cart_item_number">0</span>
+							<span class="s2_cart_item_text">items</span>
+						</div>
+						<div class="s2_cart_total_price">
+							<span class="s2_cart_currency">$</span>
+							<span class="s2_cart_price_number">0</span>
+						</div>
 					</div>
-					<div class="s2_cart_total_price">
-						<span class="s2_cart_currency">$</span>
-						<span class="s2_cart_price_number">0</span>
+				</div>
+			</div>
+			<div class="s2_menu">
+				<div class="s2_dropdown">
+					<div class="s2_dropbtn_container">
+						<button class="s2_dropbtn">new</button>
+						<img src="images/caret-dark.png" alt="">
+					</div>
+					<div class="s2_dropdown_content">
+						<a href="">Item 1</a>
+						<a href="">Item 2</a>
+						<a href="">Item 3</a>
+						<a href="">Item 4</a>
+						<a href="">Item 5</a>
+					</div>
+				</div>
+				<div class="s2_dropdown">
+					<div class="s2_dropbtn_container">
+						<button class="s2_dropbtn">designers</button>
+						<img src="images/caret-dark.png" alt="">
+					</div>
+					<div class="s2_dropdown_content">
+						<a href="">Item 1</a>
+						<a href="">Item 2</a>
+						<a href="">Item 3</a>
+						<a href="">Item 4</a>
+						<a href="">Item 5</a>
+					</div>
+				</div>
+				<div class="s2_dropdown">
+					<div class="s2_dropbtn_container">
+						<button class="s2_dropbtn">women</button>
+						<img src="images/caret-dark.png" alt="">
+					</div>
+					<div class="s2_dropdown_content">
+						<a href="">Item 1</a>
+						<a href="">Item 2</a>
+						<a href="">Item 3</a>
+						<a href="">Item 4</a>
+						<a href="">Item 5</a>
+					</div>
+				</div>
+				<div class="s2_dropdown">
+					<div class="s2_dropbtn_container">
+						<button class="s2_dropbtn">men</button>
+						<img src="images/caret-dark.png" alt="">
+					</div>
+					<div class="s2_dropdown_content">
+						<a href="">Item 1</a>
+						<a href="">Item 2</a>
+						<a href="">Item 3</a>
+						<a href="">Item 4</a>
+						<a href="">Item 5</a>
+					</div>
+				</div>
+				<div class="s2_dropdown">
+					<div class="s2_dropbtn_container">
+						<button class="s2_dropbtn">clearence</button>
+						<img src="images/caret-dark.png" alt="">
+					</div>
+					<div class="s2_dropdown_content">
+						<a href="">Item 1</a>
+						<a href="">Item 2</a>
+						<a href="">Item 3</a>
+						<a href="">Item 4</a>
+						<a href="">Item 5</a>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
+	<!--SECTION 3-->
+	<div class="section">
+		<div class="s3"></div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
