--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="icon" href="images/icon.png">
+	<link href="https://fonts.googleapis.com/css?family=Mr+De+Haviland" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
 	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 					crossorigin="anonymous">-->
 	<!--<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">-->
@@ -73,7 +75,9 @@
 	<div class="section2">
 		<div class="s2">
 			<div class="s2_main">
-			<a href="#" >	<div class="s2_logo_section"></div> </a>
+				<a href="#">
+					<div class="s2_logo_section"></div>
+				</a>
 				<div class="s2_cart">
 					<div class="s2_cart_top">
 						<span>Your cart</span>
@@ -188,7 +192,69 @@
 	</div>
 	<!--SECTION 3-->
 	<div class="section">
-		<div class="s3"></div>
+		<div class="slideshow-container s3">
+			<div class="mySlides fade">
+				<div class="slide_text_container">
+					<div class="slide_text" id="s3_slide1_text">
+						<h4 class="slide_text_line1">
+							Crazy
+						</h4>
+						<div class="slide_title">
+							<h2 class="slide_title_line1">
+								crazy
+							</h2>
+							<br>
+							<h2 class="slide_title_line2">
+								summer
+								<hr>
+							</h2>
+						</div>
+						<h3 class="slide_text_line4">
+							woman collection
+						</h3>
+						<a href="#"> <button type="text" class="s3_button">
+								<span class="s3_button_text" >shop now</span>
+								<img src="images/3-button-arrow.png" alt="" class="s3_button_image" >
+							</button>
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="mySlides fade">
+				<div class="slide_text_container">
+					<div class="slide_text" id="s3_slide2_text">
+						<h4 class="slide_text_line1">
+							Cold
+						</h4>
+						<div class="slide_title">
+							<h2 class="slide_title_line1">
+								Cold
+							</h2>
+							<br>
+							<h2 class="slide_title_line2">
+								winter
+								<hr>
+							</h2>
+						</div>
+						<h3 class="slide_text_line4">
+							woman collection
+						</h3>
+						<a href="#"> <button type="text" class="s3_button">
+								<span class="s3_button_text" >shop now</span>
+								<img src="images/3-button-arrow.png" alt="" class="s3_button_image" >
+							</button>
+						</a>
+					</div>
+				</div>
+			</div>
+			<a class="prev" onclick="plusSlides(-1)">❮</a>
+			<a class="next" onclick="plusSlides(1)">❯</a>
+		</div>
+		<br>
+		<div style="text-align:center">
+			<span class="dot" onclick="currentSlide(1)"></span>
+			<span class="dot" onclick="currentSlide(2)"></span>
+		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
