--- a/index.html
+++ b/index.html
@@ -256,6 +256,34 @@
 			<span class="dot" onclick="currentSlide(2)"></span>
 		</div>
 	</div>
+	<!--SECTION 4-->
+	<div class="section section4">
+		<div class="s4">
+			<div class="s4_left">
+				<div class="s4_left_text">Stay updated</div>
+				<div class="s4_form">
+					<input type="text" class="s4_input" placeholder="Your email address" >
+					<button class="s4_submit">
+				<img src="images/button-plus.png" alt="">
+				</button>
+				</div>
+			</div>
+			<div class="s4_right">
+				<div class="s4_right_text">Find us here</div>
+				<div class="s4_social">
+					<a href="">
+						<div class="s4_social_link s4_social_link1"><img src="images/4-fb.png" alt="" class="s4_social_link_pic"></div>
+					</a>
+					<a href="">
+						<div class="s4_social_link s4_social_link2 "><img src="images/4-pn.png" alt="" class="s4_social_link_pic"></div>
+					</a>
+					<a href="">
+						<div class="s4_social_link s4_social_link3 "><img src="images/4-tw.png" alt="" class="s4_social_link_pic"></div>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 					crossorigin="anonymous"></script>-->
