--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 			<div class="s4_left">
 				<div class="s4_left_text">Stay updated</div>
 				<div class="s4_form">
-					<input type="text" class="s4_input" placeholder="Your email address" >
+					<input type="text" class="s4_input" placeholder="Your email address">
 					<button class="s4_submit">
 				<img src="images/button-plus.png" alt="">
 				</button>
@@ -282,6 +282,56 @@
 					</a>
 				</div>
 			</div>
+		</div>
+	</div>
+	<!--SECTION 5-->
+	<div class="section">
+		<div class="s5">
+			<div class="s5_left">
+				<div class="s5_big_tile">
+					<div class="s5_big_tile_text">
+						<h5 class="s5_big_tile_text_line1">best</h5>
+						<h3 class="s5_big_tile_text_line2">outfits</h3>
+						<div class="s5_big_tile_text_separator">
+							<hr>
+							<div>&</div>
+							<hr>
+						</div>
+						<h3 class="s5_big_tile_text_line3">looks</h3>
+					</div>
+				</div>
+			</div>
+			<div class="s5_right">
+				<div class="s5_medium_tile">
+					<div class="s5_medium_tile_text_container">
+						<div class="s5_medium_tile_text">
+							<h6 class="s5_medium_tile_text_line1">summer</h6>
+							<h4 class="s5_medium_tile_text_line2">party</h4>
+							<h6 class="s5_medium_tile_text_line3">collection</h6>
+						</div>
+					</div>
+				</div>
+
+				<div class="s5_small_tile">
+					<div class="s5_small_tile_text">
+						<h5 class="s5_small_tile_text_line">best sellers</h5>
+						<img src="" alt="">
+					</div>
+				</div>
+
+				<div class="s5_small_tile">
+					<div class="s5_small_tile_text">
+						<h5 class="s5_small_tile_text_line">fall leather</h5>
+						<button type="button" class="s5_small_tile_button">
+								<span>shop now</span>
+								<img src="images/3-button-arrow.png" alt="">
+						</button>
+					</div>
+				</div>
+
+			</div>
+			
+		
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
