--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 				<div class="s5_medium_tile">
 					<div class="s5_medium_tile_text_container">
 						<div class="s5_medium_tile_text">
-							<h6 class="s5_medium_tile_text_line1">summer</h6>
+							<h6 class="s5_medium_tile_text_line1">Summer</h6>
 							<h4 class="s5_medium_tile_text_line2">party</h4>
 							<h6 class="s5_medium_tile_text_line3">collection</h6>
 						</div>
