--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="icon" href="images/icon.png">
 	<link href="https://fonts.googleapis.com/css?family=Mr+De+Haviland" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 					crossorigin="anonymous">-->
 	<!--<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">-->
@@ -290,49 +290,52 @@
 		<div class="s5">
 			<div class="s5_left">
 				<div class="s5_big_tile">
-					<div class="s5_big_tile_text">
-						<h5 class="s5_big_tile_text_line1">best</h5>
-						<h3 class="s5_big_tile_text_line2">outfits</h3>
-						<div class="s5_big_tile_text_separator">
-							<hr>
-							<div>&</div>
-							<hr>
+					<a href="#">
+						<div class="s5_big_tile_text">
+							<h5 class="s5_big_tile_text_line1">best</h5>
+							<h3 class="s5_big_tile_text_line2">outfits</h3>
+							<div class="s5_big_tile_text_separator">
+								<hr>
+								<div>&</div>
+								<hr>
+							</div>
+							<h3 class="s5_big_tile_text_line3">looks</h3>
 						</div>
-						<h3 class="s5_big_tile_text_line3">looks</h3>
-					</div>
+					</a>
 				</div>
 			</div>
 			<div class="s5_right">
 				<div class="s5_medium_tile">
-					<div class="s5_medium_tile_text_container">
-						<div class="s5_medium_tile_text">
-							<h6 class="s5_medium_tile_text_line1">Summer</h6>
-							<h4 class="s5_medium_tile_text_line2">party</h4>
-							<h6 class="s5_medium_tile_text_line3">collection</h6>
+					<a href="#">
+						<div class="s5_medium_tile_text_container">
+							<div class="s5_medium_tile_text">
+								<h6 class="s5_medium_tile_text_line1">Summer</h6>
+								<h4 class="s5_medium_tile_text_line2">party</h4>
+								<h6 class="s5_medium_tile_text_line3">collection</h6>
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
-
+				<div class="s5_small_tile">
+					<a href="#">
+						<div class="s5_small_tile_text">
+							<h5 class="s5_small_tile_text_line">best sellers</h5>
+							<img src="images/5-arrow.png" alt="">
+						</div>
+					</a>
+				</div>
 				<div class="s5_small_tile">
 					<div class="s5_small_tile_text">
-						<h5 class="s5_small_tile_text_line">best sellers</h5>
-						<img src="" alt="">
-					</div>
-				</div>
-
-				<div class="s5_small_tile">
-					<div class="s5_small_tile_text">
-						<h5 class="s5_small_tile_text_line">fall leather</h5>
-						<button type="button" class="s5_small_tile_button">
+						<h5 class="s5_small_tile_text_line">fall<br>leather</h5>
+						<a href="#">
+							<button type="button" class="s5_small_tile_button">
 								<span>shop now</span>
 								<img src="images/3-button-arrow.png" alt="">
 						</button>
+							<a/>
 					</div>
 				</div>
-
 			</div>
-			
-		
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
