--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Mr+De+Haviland" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
 	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 					crossorigin="anonymous">-->
 	<!--<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">-->
@@ -338,6 +339,122 @@
 			</div>
 		</div>
 	</div>
+	<!--SECTION 6-->
+	<!--SECTION 7-->
+	<div class="section">
+		<div class="s7">
+			<hr class="s7_line">
+			<div class="s7_content">
+				<div class="s7_content_line1">clearance</div>
+				<div class="s7_content_line2">
+					<div>50</div>
+					<div>%<br>off</div>
+					<!--<span>off</span>-->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!--SECTION 8-->
+	<div class="section">
+		<div class="s8">
+			<div class="s8_left">
+				<div class="s6_8_tile">
+					<img src="images/8-1.jpg" alt="" class="s8_tile_image">
+					<div class="s6_8_tile_text">
+						<p class="s6_8_tile_name">nadia dress</p>
+						<p class="s6_8_tile_price">
+							<span class="s6_8_tile_price_currency">$</span>
+							<span class="s6_8_tile_price_number">64.95</span>
+						</p>
+						<br>
+						<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+						</a>
+					</div>
+				</div>
+				<div class="s6_8_tile">
+					<div class="s6_8_tile_sale">
+						<div class="s6_8_tile_sale_bg"></div>
+						<span class="s6_8_tile_sale_text">sale</span>
+					</div>
+					<img src="images/8-2.jpg" alt="" class="s8_tile_image">
+					<div class="s6_8_tile_text">
+						<p class="s6_8_tile_name">sofi blouse</p>
+						<p class="s6_8_tile_price">
+							<span class="s6_8_tile_price_currency">$</span>
+							<span class="s6_8_tile_price_number">26.95</span>
+						</p>
+						<br>
+						<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="s8_right">
+				<div class="s6_8_tile">
+					<img src="images/8-3.jpg" alt="" class="s8_tile_image">
+					<div class="s6_8_tile_text">
+						<p class="s6_8_tile_name">gooding shorts</p>
+						<p class="s6_8_tile_price">
+							<span class="s6_8_tile_price_currency">$</span>
+							<span class="s6_8_tile_price_number">79.95</span>
+						</p>
+						<br>
+						<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+						</a>
+					</div>
+				</div>
+				<div class="s6_8_tile">
+					<div class="s6_8_tile_sale">
+						<div class="s6_8_tile_sale_bg"></div>
+						<span class="s6_8_tile_sale_text">sale</span>
+					</div>
+					<img src="images/8-4.jpg" alt="" class="s8_tile_image">
+					<div class="s6_8_tile_text">
+						<p class="s6_8_tile_name">mimosa lace dress</p>
+						<p class="s6_8_tile_price">
+							<span class="s6_8_tile_price_currency">$</span>
+							<span class="s6_8_tile_price_number">76.00</span>
+						</p>
+						<br>
+						<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!--SECTION 9-->
+	<div class="section">
+		<div class="s9">
+			<hr class="s9_line1">
+			<h3 class="s9_title">favourite brands</h3>
+			<img src="images/9-1.png" alt="" class="s9_brand_pic">
+			<img src="images/9-2.png" alt="" class="s9_brand_pic">
+			<img src="images/9-3.png" alt="" class="s9_brand_pic">
+			<img src="images/9-4.png" alt="" class="s9_brand_pic">
+			<img src="images/9-5.png" alt="" class="s9_brand_pic">
+			<img src="images/9-6.png" alt="" class="s9_brand_pic">
+			<img src="images/9-7.png" alt="" class="s9_brand_pic">
+			<img src="images/9-8.png" alt="" class="s9_brand_pic">
+			<hr class="s9_line2">
+		</div>
+	</div>
+	<!--SECTION 10-->
+	<!--SECTION 11-->
+	<!--SECTION 12-->
+	<!--SECTION 13-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 					crossorigin="anonymous"></script>-->
