--- a/index.html
+++ b/index.html
@@ -452,7 +452,37 @@
 		</div>
 	</div>
 	<!--SECTION 10-->
+	<div class="section">
+		<div class="s10">
+			<h5 class="s10_title">About LookShop</h5>
+			<p class="s10_text">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis
+				bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus
+				a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae
+				erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+				Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue.</p>
+		</div>
+	</div>
 	<!--SECTION 11-->
+	<div class="section">
+		<div class="s11">
+			<div class="s11_text">We accept</div>
+			<div class="s11_payment_container">
+				<div class="s11_payment">
+					<img src="images/11-1.png" alt="" class="s11_payment_pic">
+				</div>
+				<div class="s11_payment"></div>
+				<div class="s11_payment"></div>
+				<div class="s11_payment"></div>
+				<div class="s11_payment"></div>
+				<div class="s11_payment"></div>
+				<div class="s11_payment"></div>
+				<div class="s11_payment"></div>
+				<div class="s11_payment"></div>
+				<div class="s11_payment"></div>
+				<div class="s11_payment"></div>
+			</div>
+		</div>
+	</div>
 	<!--SECTION 12-->
 	<!--SECTION 13-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
