Add section 12. Start section 13

--- a/index.html
+++ b/index.html
@@ -484,7 +484,153 @@
 		</div>
 	</div>
 	<!--SECTION 12-->
+	<div class="section">
+		<div class="s12">
+			<div class="s12_column">
+				<h5 class="s12_column_title">Customer Service</h5>
+				<ul class="s12_column_list">
+					<a href="#">
+						<li class="s12_column_list_item">Contact</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">FAQ</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">Terms of payment</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">Terms of sale</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">Delivery terms and conditions</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">Rerurns and refunds</li>
+					</a>
+				</ul>
+			</div>
+			<div class="s12_column">
+				<h5 class="s12_column_title">Information</h5>
+				<ul class="s12_column_list">
+					<a href="#">
+						<li class="s12_column_list_item">Affiliate</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">Cookies</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">How to Shop</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">About Nelly</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">Investor relations</li>
+					</a>
+				</ul>
+			</div>
+			<div class="s12_column">
+				<h5 class="s12_column_title">Campaigns</h5>
+				<ul class="s12_column_list">
+					<a href="#">
+						<li class="s12_column_list_item">Evening dresses</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">Makeup</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">Fashion forward</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">Training clothes</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">Special Occasion Dresses</li>
+					</a>
+				</ul>
+			</div>
+			<div class="s12_column">
+				<h5 class="s12_column_title">Stores</h5>
+				<ul class="s12_column_list">
+					<a href="#">
+						<li class="s12_column_list_item">Paris</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">New York</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">London</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">Madrid</li>
+					</a>
+					<a href="#">
+						<li class="s12_column_list_item">Tokio</li>
+					</a>
+				</ul>
+			</div>
+			<div class="s12_column">
+				<h5 class="s12_column_title">Social</h5>
+				<table>
+					<tr>
+						<td> <a href="#"> <img src="images/12-1.png" alt=""> </a> </td>
+						<td> <a href="#"> <img src="images/12-2.png" alt=""></a></td>
+						<td><a href="#"><img src="images/12-3.png" alt=""></a></td>
+						
+					</tr>
+					<tr>
+						<td><a href="#"><img src="images/12-4.png" alt=""></a></td>
+						<td><a href="#"><img src="images/12-5.png" alt=""></a></td>
+						<td><a href="#"><img src="images/12-6.png" alt=""></a></td>
+					</tr>
+				</table>
+			</div>
+			<div class="s12_column">
+				<p class="s12_last_column_line1">100%</p>
+					<p class="s12_last_column_line2">secured</p>
+			</div>
+		</div>
+	</div>
 	<!--SECTION 13-->
+
+<div class="section s13_container">
+	<div class="s13">
+<div class="s13_left">
+		<div class="s13_menu_icon">
+						<i class="fa fa-bars" aria-hidden="true"></i>
+		</div>
+		<div class="s13_menu">
+			<ul>
+				<a href="#">
+					<li class="s13_menu_item" >Privacy & Cookies</li>
+				</a>
+				<a href="#">
+					<li class="s13_menu_item">Terms & Conditions</li>
+				</a>
+				<a href="#">
+					<li class="s13_menu_item">Accessibility</li>
+				</a>
+				<a href="#">
+					<li class="s13_menu_item">Store Directory</li>
+				</a>
+				<a href="#">
+					<li class="s13_menu_item">About Us</li>
+				</a>
+			</ul>
+		</div>
+
+</div>
+<div class="s13_right">
+	<p class="s13_copyright" >© LookShop.com<br>All Rights Reserved</p>
+
+</div>
+
+
+	</div>
+</div>
+
+
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 					crossorigin="anonymous"></script>-->
