--- a/index.html
+++ b/index.html
@@ -340,6 +340,16 @@
 		</div>
 	</div>
 	<!--SECTION 6-->
+	<div class="section">
+		<div class="s6">
+
+
+		</div>
+	</div>
+
+
+
+
 	<!--SECTION 7-->
 	<div class="section">
 		<div class="s7">
